# PymcCosmology

./: .gitignore  README.md  environment.yml  setup.cfg
notebooks/: Chirp-Mass-Cosmology.ipynb  Redshift-Distance.ipynb  examples.ipynb
src/pymc_cosmology/: __init__.py  cosmology.py  models.py  utils.py
