[metadata]
name = pymc_cosmology
version = 0.0.1
author = Will M. Farr
author_email = wfarr@flatironinstitute.org
description = Examples and library functions for fitting cosmography with pymc.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/farr/PymcCosmology
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires = 
    arviz
    astropy
    pymc=4
    seaborn
    jupyterlab
    ipykernel
[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src